[package]
name = "aes-edu"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of code for teaching the full AES algorith as described in FIPS 197."
documentation = "https://docs.rs/aes-edu/latest/aes_edu/index.html"
keywords = ["aes", "encryption", "cipher", "education", "learn"]
authors = ["GhostUponAvon"]